--- a/scss/core/_tables.scss
+++ b/scss/core/_tables.scss
@@ -174,6 +174,12 @@
 // Active variant
 @include table-row-variant(active, $table-bg-active, $table-bg-active-hover);
 
+// Theme generation
+@if (type-of($table-colors) == "map" and length($table-colors) != 0) {
+    $mixed-table-themes: _mix-context-colors($table-colors, $table-levels);
+    $table-themes: map-merge($mixed-table-themes, $table-themes);
+}
+
 // Contextual variants
 @if (type-of($table-themes) == "map" and length($table-themes) != 0) {
     @each $theme, $colors in $table-themes {
